--- a/static/static/css/styles.css
+++ b/static/static/css/styles.css
@@ -28,7 +28,7 @@
 	letter-spacing:-1.5;
 	line-height:px;
 }
-.e1_69 { 
+.e1_69 {
 	color:rgba(0, 0, 0, 1);
 	width:686px;
 	height:10px;
@@ -41,7 +41,7 @@
 	letter-spacing:-1.5;
 	line-height:px;
 }
-.e1_70 { 
+.e1_70 {
 	color:rgba(0, 0, 0, 1);
 	width:686px;
 	height:50px;
@@ -88,14 +88,14 @@
 	font-size:15px;
 	letter-spacing:-1.5;
 }
-.e1_72 { 
+.e1_72 {
 	width:130px;
 	height:40px;
 	position:absolute;
 	left:913px;
 	top:506px;
 }
-.ei1_72_0_557 { 
+.ei1_72_0_557 {
 	background-color:rgba(255, 255, 255, 1);
 	width:130px;
 	height:40px;
@@ -107,10 +107,10 @@
 	border-bottom-left-radius:6px;
 	border-bottom-right-radius:6px;
 }
-.i1_72_0_557 { 
+.i1_72_0_557 {
 	border:1px solid rgba(24.000000469386578, 160.00000566244125, 251.00000023841858, 1);
 }
-.ei1_72_0_559 { 
+.ei1_72_0_559 {
 	color:rgba(24.000000469386578, 160.00000566244125, 251.00000023841858, 1);
 	width:101px;
 	height:18px;
@@ -122,7 +122,7 @@
 	font-size:15px;
 	letter-spacing:-1.5;
 }
-.e1_73 { 
+.e1_73 {
 	width:130px;
 	height:40px;
 	position:absolute;
@@ -141,10 +141,10 @@
 	border-bottom-left-radius:6px;
 	border-bottom-right-radius:6px;
 }
-.i1_73_0_557 { 
+.i1_73_0_557 {
 	border:1px solid rgba(24.000000469386578, 160.00000566244125, 251.00000023841858, 1);
 }
-.ei1_73_0_559 { 
+.ei1_73_0_559 {
 	color:rgba(24.000000469386578, 160.00000566244125, 251.00000023841858, 1);
 	width:101px;
 	height:18px;
@@ -156,14 +156,14 @@
 	font-size:15px;
 	letter-spacing:-1.5;
 }
-.e1_74 { 
+.e1_74 {
 	width:130px;
 	height:40px;
 	position:absolute;
 	left:913px;
 	top:836px;
 }
-.ei1_74_0_557 { 
+.ei1_74_0_557 {
 	background-color:rgba(255, 255, 255, 1);
 	width:130px;
 	height:40px;
@@ -175,10 +175,10 @@
 	border-bottom-left-radius:6px;
 	border-bottom-right-radius:6px;
 }
-.i1_74_0_557 { 
+.i1_74_0_557 {
 	border:1px solid rgba(24.000000469386578, 160.00000566244125, 251.00000023841858, 1);
 }
-.ei1_74_0_559 { 
+.ei1_74_0_559 {
 	color:rgba(24.000000469386578, 160.00000566244125, 251.00000023841858, 1);
 	width:101px;
 	height:18px;
@@ -190,7 +190,7 @@
 	font-size:15px;
 	letter-spacing:-1.5;
 }
-.e1_75 { 
+.e1_75 {
 	color:rgba(0, 0, 0, 1);
 	width:686px;
 	height:36px;
@@ -203,7 +203,7 @@
 	letter-spacing:-1.5;
 	line-height:px;
 }
-.e1_76 { 
+.e1_76 {
 	color:rgba(0, 0, 0, 0.800000011920929);
 	width:686px;
 	height:90px;
@@ -216,7 +216,7 @@
 	letter-spacing:-1.5;
 	line-height:px;
 }
-.e1_77 { 
+.e1_77 {
 	color:rgba(0, 0, 0, 1);
 	width:686px;
 	height:36px;
@@ -229,7 +229,7 @@
 	letter-spacing:-1.5;
 	line-height:px;
 }
-.e1_78 { 
+.e1_78 {
 	color:rgba(0, 0, 0, 0.800000011920929);
 	width:686px;
 	height:122px;
@@ -242,7 +242,7 @@
 	letter-spacing:-1.5;
 	line-height:px;
 }
-.e1_79 { 
+.e1_79 {
 	color:rgba(0, 0, 0, 1);
 	width:686px;
 	height:36px;
@@ -255,7 +255,7 @@
 	letter-spacing:-1.5;
 	line-height:px;
 }
-.e1_80 { 
+.e1_80 {
 	color:rgba(0, 0, 0, 0.800000011920929);
 	width:686px;
 	height:90px;
@@ -278,7 +278,7 @@
 	background-repeat:no-repeat;
 	background-size:cover;
 }
-.e217_425 { 
+.e217_425 {
 	background-color:rgba(254.00000005960464, 156.00000590085983, 47.0000009983778, 1);
 	width:1680px;
 	height:804px;
@@ -286,7 +286,7 @@
 	left:0px;
 	top:1946px;
 }
-.e217_427 { 
+.e217_427 {
 	background-color:rgba(255, 255, 255, 0.7799999713897705);
 	width:276.09381103515625px;
 	height:83.55467987060547px;
@@ -298,7 +298,7 @@
 	border-bottom-left-radius:4.84375px;
 	border-bottom-right-radius:4.84375px;
 }
-.e217_428 { 
+.e217_428 {
 	color:rgba(53.1249987334013, 53.1249987334013, 53.1249987334013, 1);
 	width:247.03125px;
 	height:55px;
@@ -311,7 +311,7 @@
 	letter-spacing:3;
 	line-height:px;
 }
-.e217_429 { 
+.e217_429 {
 	border-radius:500px;
 	background-color:rgba(236.93750202655792, 233.9757737517357, 231.01406067609787, 0.3100000023841858);
 	width:52.5px;
@@ -320,14 +320,14 @@
 	left:1592.0625px;
 	top:36.18018341064453px;
 }
-.e217_430 { 
+.e217_430 {
 	width:29.062501907348633px;
 	height:29.0625px;
 	position:absolute;
 	left:1478.5546875px;
 	top:42.3828125px;
 }
-.e217_431 { 
+.e217_431 {
 	background-color:rgba(190.18750101327896, 188.60260605812073, 188.60260605812073, 1);
 	width:21.796875px;
 	height:21.796873092651367px;
@@ -335,7 +335,7 @@
 	left:3.6325523853302px;
 	top:3.6329424381256104px;
 }
-.e217_432 { 
+.e217_432 {
 	color:rgba(255, 255, 255, 1);
 	width:531px;
 	height:104px;
@@ -347,7 +347,7 @@
 	font-size:83.01292419433594px;
 	letter-spacing:3;
 }
-.e217_433 { 
+.e217_433 {
 	width:698px;
 	height:123.85090637207031px;
 	position:absolute;
@@ -366,7 +366,7 @@
 	font-size:21.33624267578125px;
 	letter-spacing:3;
 }
-.e217_435 { 
+.e217_435 {
 	background-color:rgba(52.000000700354576, 51.00000075995922, 51.00000075995922, 1);
 	width:698px;
 	height:79.65443420410156px;
@@ -378,17 +378,17 @@
 	border-bottom-left-radius:7.794971942901611px;
 	border-bottom-right-radius:7.794971942901611px;
 }
-.217_435 { 
+.217_435 {
 	border:1.2991621494293213px solid rgba(141.31250202655792, 141.31250202655792, 141.31250202655792, 1);
 }
-.e217_436 { 
+.e217_436 {
 	width:96px;
 	height:27px;
 	position:absolute;
 	left:41.573299407958984px;
 	top:25.983198165893555px;
 }
-.e217_437 { 
+.e217_437 {
 	color:rgba(141.31250202655792, 141.31250202655792, 141.31250202655792, 1);
 	width:96px;
 	height:27px;
@@ -400,14 +400,14 @@
 	font-size:18.188268661499023px;
 	letter-spacing:0.5;
 }
-.e217_438 { 
+.e217_438 {
 	width:698px;
 	height:123.85087585449219px;
 	position:absolute;
 	left:75px;
 	top:349.0745544433594px;
 }
-.e217_439 { 
+.e217_439 {
 	color:rgba(204.00000303983688, 198.05000871419907, 198.05000871419907, 1);
 	width:59px;
 	height:32px;
@@ -419,7 +419,7 @@
 	font-size:21.336238861083984px;
 	letter-spacing:3;
 }
-.e217_440 { 
+.e217_440 {
 	background-color:rgba(52.000000700354576, 51.00000075995922, 51.00000075995922, 1);
 	width:697.9998168945312px;
 	height:79.6544189453125px;
@@ -431,17 +431,17 @@
 	border-bottom-left-radius:7.794970512390137px;
 	border-bottom-right-radius:7.794970512390137px;
 }
-.217_440 { 
+.217_440 {
 	border:1.2991617918014526px solid rgba(141.31250202655792, 141.31250202655792, 141.31250202655792, 1);
 }
-.e217_441 { 
+.e217_441 {
 	width:184px;
 	height:27px;
 	position:absolute;
 	left:41.57331085205078px;
 	top:25.983200073242188px;
 }
-.e217_442 { 
+.e217_442 {
 	color:rgba(141.31250202655792, 141.31250202655792, 141.31250202655792, 1);
 	width:184px;
 	height:27px;
@@ -453,14 +453,14 @@
 	font-size:18.18826675415039px;
 	letter-spacing:0.5;
 }
-.e217_443 { 
+.e217_443 {
 	width:698px;
 	height:175.261962890625px;
 	position:absolute;
 	left:75px;
 	top:496.9043273925781px;
 }
-.e217_444 { 
+.e217_444 {
 	color:rgba(204.00000303983688, 198.05000871419907, 198.05000871419907, 1);
 	width:87px;
 	height:32px;
@@ -472,7 +472,7 @@
 	font-size:21.336244583129883px;
 	letter-spacing:3;
 }
-.e217_445 { 
+.e217_445 {
 	background-color:rgba(52.06249974668026, 50.544010028243065, 50.544010028243065, 1);
 	width:698px;
 	height:131.06549072265625px;
@@ -484,17 +484,17 @@
 	border-bottom-left-radius:7.7949724197387695px;
 	border-bottom-right-radius:7.7949724197387695px;
 }
-.217_445 { 
+.217_445 {
 	border:1.2991621494293213px solid rgba(141.31250202655792, 141.31250202655792, 141.31250202655792, 1);
 }
-.e217_446 { 
+.e217_446 {
 	width:72px;
 	height:27px;
 	position:absolute;
 	left:41.57310104370117px;
 	top:25.98325538635254px;
 }
-.e217_447 { 
+.e217_447 {
 	color:rgba(141.31250202655792, 141.31250202655792, 141.31250202655792, 1);
 	width:72px;
 	height:27px;
@@ -506,14 +506,14 @@
 	font-size:18.188270568847656px;
 	letter-spacing:0.5;
 }
-.e217_448 { 
+.e217_448 {
 	width:270.0390625px;
 	height:54.4921875px;
 	position:absolute;
 	left:78px;
 	top:698px;
 }
-.e217_449 { 
+.e217_449 {
 	background-color:rgba(36.00000165402889, 67.00000360608101, 110.00000104308128, 1);
 	width:270.0390625px;
 	height:50px;
@@ -525,7 +525,7 @@
 	border-bottom-left-radius:4.84375px;
 	border-bottom-right-radius:4.84375px;
 }
-.e217_450 { 
+.e217_450 {
 	color:rgba(255, 253.93750101327896, 253.93750101327896, 1);
 	width:75px;
 	height:36px;
@@ -537,14 +537,14 @@
 	font-size:24px;
 	letter-spacing:3;
 }
-.e217_451 { 
+.e217_451 {
 	width:56.16725540161133px;
 	height:53.358890533447266px;
 	position:absolute;
 	left:283.6444091796875px;
 	top:907.10107421875px;
 }
-.ei217_451_215_456 { 
+.ei217_451_215_456 {
 	background-color:rgba(255, 3.000000058673322, 2.000000118277967, 1);
 	width:56.16725540161133px;
 	height:37.5937614440918px;
@@ -552,7 +552,7 @@
 	left:0.056222103536129px;
 	top:7.882579326629639px;
 }
-.ei217_451_215_457 { 
+.ei217_451_215_457 {
 	background-color:rgba(254.00000005960464, 254.00000005960464, 254.00000005960464, 1);
 	width:14.680065155029297px;
 	height:15.868208885192871px;
@@ -560,14 +560,14 @@
 	left:22.39559555053711px;
 	top:18.74544334411621px;
 }
-.e217_452 { 
+.e217_452 {
 	width:56.16725540161133px;
 	height:53.358890533447266px;
 	position:absolute;
 	left:95.48408508300781px;
 	top:907.10107421875px;
 }
-.ei217_452_215_472 { 
+.ei217_452_215_472 {
 	background-color:rgba(24.000000469386578, 119.00000050663948, 242.00000077486038, 1);
 	width:56.16725540161133px;
 	height:53.0347785949707px;
@@ -575,21 +575,21 @@
 	left:0px;
 	top:0px;
 }
-.ei217_452_215_473 { 
+.ei217_452_215_473 {
 	background-color:rgba(255, 255, 255, 1);
 	width:24.0246
 	position:absolute;
 	left:16.564952850341797px;
 	top:10.421658515930176px;
 }
-.e217_453 { 
+.e217_453 {
 	width:53.358890533447266px;
 	height:53.358890533447266px;
 	position:absolute;
 	left:190.96868896484375px;
 	top:907.10107421875px;
 }
-.ei217_453_215_466 { 
+.ei217_453_215_466 {
 	background-color:rgba(0, 1.0000000591389835, 0, 1);
 	width:53.327632904052734px;
 	height:53.34846878051758px;
@@ -597,7 +597,7 @@
 	left:0px;
 	top:0px;
 }
-.ei217_453_215_467 { 
+.ei217_453_215_467 {
 	background-color:rgba(0, 1.0000000591389835, 0, 1);
 	width:27.40896224975586px;
 	height:27.40896224975586px;
@@ -605,7 +605,7 @@
 	left:12.97496509552002px;
 	top:12.97496509552002px;
 }
-.ei217_453_215_468 { 
+.ei217_453_215_468 {
 	background-color:rgba(0, 1.0000000591389835, 0, 1);
 	width:6.398896217346191px;
 	height:6.398909091949463px;
@@ -1119,4 +1119,11 @@
 	position:absolute;
 	left:33.9375px;
 	top:8.306279182434082px;
+}
+.container-fluid{
+  height: 80vh;
+}
+.container-fluid.px-0 {
+  padding-left: 0;
+  padding-right: 0;
 }
