--- a/Gym/templates/about.html
+++ b/Gym/templates/about.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
-    <h1>About</h1>
-    <p>This is the about page for my Django app.</p>
+{% block main_image %}
+{% endblock %}
+
 {% endblock %}
