--- a/maps/templates/maps/map.html
+++ b/maps/templates/maps/map.html
@@ -1,7 +1,13 @@
 {% extends 'base.html' %}
+{% load static %}
 
-{% block content %}
-    <div class="container mt-4 mb-4">
+{% block main_block %}
+    <div class="container">
+        <!-- Add your main block content here -->
+        <div class="mt-5">
+
+            <!-- Main Content -->
+    <div class="my-5">
         <h1>Mapa de ubicación</h1>
         <div class="mapa">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15715.92936428271!2d-84.22291485695257!3d10.018315567741432!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0f91995fd3cd5%3A0xc79413d779094875!2sFT%20%26%20Calisthenics%20Gym!5e0!3m2!1ses-419!2scr!4v1683610314079!5m2!1ses-419!2scr" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
